--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
 .App {
   text-align: center;
+  color: white;
   background-color: black;
 }
+.Cluster {
+  display: inline-flex;
+}
+
+.Datacenter {
+  display: inline-flex;
+}
+
+.datacentername {
+  display: inline-flex;
+}
+
 .Ring {
   display: inline-flex;
 }
